// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogScale > should create ticks > for interval: -1 domain: [ -10000000, -0.1 ] case 1`] = `
{
  "count": 9,
  "firstTickIndex": 0,
  "ticks": [
    -10000000,
    -1000000,
    -100000,
    -10000,
    -1000,
    -100,
    -10,
    -1,
    -0.1,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: -2 domain: [ -10000000, -0.1 ] case 1`] = `
{
  "count": 5,
  "firstTickIndex": 0,
  "ticks": [
    -10000000,
    -100000,
    -1000,
    -10,
    -0.1,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: -10 domain: [ -10000000, -0.1 ] case 1`] = `
{
  "count": 2,
  "firstTickIndex": 0,
  "ticks": [
    -10000000,
    -0.1,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 0.1 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 81,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    0.125892541179417,
    0.158489319246111,
    0.199526231496888,
    0.251188643150958,
    0.316227766016838,
    0.398107170553497,
    0.501187233627272,
    0.630957344480193,
    0.794328234724281,
    1,
    1.25892541179417,
    1.58489319246111,
    1.99526231496888,
    2.51188643150958,
    3.16227766016838,
    3.98107170553497,
    5.01187233627272,
    6.30957344480193,
    7.94328234724282,
    10,
    12.5892541179417,
    15.8489319246111,
    19.9526231496888,
    25.1188643150958,
    31.6227766016838,
    39.8107170553497,
    50.1187233627272,
    63.0957344480193,
    79.4328234724281,
    100,
    125.892541179417,
    158.489319246111,
    199.526231496888,
    251.188643150958,
    316.227766016838,
    398.107170553497,
    501.187233627272,
    630.957344480193,
    794.328234724281,
    1000,
    1258.92541179417,
    1584.89319246111,
    1995.26231496888,
    2511.88643150958,
    3162.27766016838,
    3981.07170553497,
    5011.87233627273,
    6309.57344480193,
    7943.28234724281,
    10000,
    12589.2541179417,
    15848.9319246111,
    19952.6231496888,
    25118.8643150958,
    31622.7766016838,
    39810.7170553497,
    50118.7233627273,
    63095.7344480193,
    79432.8234724282,
    100000,
    125892.541179417,
    158489.319246111,
    199526.231496888,
    251188.643150958,
    316227.766016838,
    398107.170553497,
    501187.233627272,
    630957.344480193,
    794328.234724282,
    1000000,
    1258925.41179417,
    1584893.19246111,
    1995262.31496888,
    2511886.43150958,
    3162277.66016838,
    3981071.70553497,
    5011872.33627272,
    6309573.44480193,
    7943282.34724282,
    10000000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 0.5 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 17,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    0.316227766016838,
    1,
    3.16227766016838,
    10,
    31.6227766016838,
    100,
    316.227766016838,
    1000,
    3162.27766016838,
    10000,
    31622.7766016838,
    100000,
    316227.766016838,
    1000000,
    3162277.66016838,
    10000000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 1 domain: [ -10000000, -0.1 ] case 1`] = `
{
  "count": 9,
  "firstTickIndex": 0,
  "ticks": [
    -10000000,
    -1000000,
    -100000,
    -10000,
    -1000,
    -100,
    -10,
    -1,
    -0.1,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 1 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 9,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    1,
    10,
    100,
    1000,
    10000,
    100000,
    1000000,
    10000000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 2 domain: [ -10000000, -0.1 ] case 1`] = `
{
  "count": 5,
  "firstTickIndex": 0,
  "ticks": [
    -10000000,
    -100000,
    -1000,
    -10,
    -0.1,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 2 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 5,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    10,
    1000,
    100000,
    10000000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 3 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 3.6666666666666665,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    100,
    100000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 4 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 3,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    1000,
    10000000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 5 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 2.6,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    10000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 6 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 2.333333333333333,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    100000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 7 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 2.142857142857143,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    1000000,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 10 domain: [ -10000000, -0.1 ] case 1`] = `
{
  "count": 2,
  "firstTickIndex": 0,
  "ticks": [
    -10000000,
    -0.1,
  ],
}
`;

exports[`LogScale > should create ticks > for interval: 10 domain: [ 0.1, 10000000 ] case 1`] = `
{
  "count": 2,
  "firstTickIndex": 0,
  "ticks": [
    0.1,
    10000000,
  ],
}
`;
